add horizontal_line and vertical_line shape

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         });
 
         Annotorious.SelectorPack(anno, {
-          tools: ['circle', 'ellipse', 'rect', 'freehand', 'polygon', 'line', 'horizontal_line']
+          tools: ['circle', 'ellipse', 'rect', 'freehand', 'polygon', 'line', 'horizontal_line', 'vertical_line']
         });
 
         var tools = anno.listDrawingTools();
